--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "gpxparser": "^3.0.8",
     "leaflet": "^1.7.1",
+    "leaflet-ant-path": "^1.3.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
