--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@elfalem/leaflet-curve": "^0.8.0",
     "@types/leaflet": "^1.7.1",
     "fs": "^0.0.1-security",
     "gpxparser": "^3.0.8",
