--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.3",
     "@elfalem/leaflet-curve": "^0.8.0",
     "@types/leaflet": "^1.7.1",
+    "fit-file-parser": "^1.9.0",
     "fs": "^0.0.1-security",
     "gpxparser": "^3.0.8",
     "leaflet": "^1.7.1",
@@ -34,7 +35,7 @@
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.15",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
