--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/leaflet": "^1.7.1",
     "fit-file-parser": "^1.9.0",
     "fs": "^0.0.1-security",
+    "garmin-api-handler": "^5.0.3",
     "gpxparser": "^3.0.8",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
