--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-
+          "options": {
+            "browserTarget": "projectname:build",
+            "proxyConfig": "./proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "surf-performance:build:production"
