--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve start:api",
+    "start:api": "node tools/apiServer.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,12 +21,16 @@
     "@angular/router": "~12.0.3",
     "@elfalem/leaflet-curve": "^0.8.0",
     "@types/leaflet": "^1.7.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "fit-file-parser": "^1.9.0",
     "fs": "^0.0.1-security",
     "garmin-api-handler": "^5.0.3",
+    "garmin-connect": "^1.4.0",
     "gpxparser": "^3.0.8",
     "leaflet": "^1.7.1",
     "leaflet-ant-path": "^1.3.0",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
